[package]
name = "core_server"
version = "0.1.0"
authors = ["nmbr7 <suhailr7@ymail.com>"]
edition = "2018"

[profile.release]
debug = true


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
diesel = { version = "1.4.3", features = ["mysql"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "0.10"
redis = "*"
log = "*"
env_logger = "*"
